src/core/syrec/parser/antlr/SyReCParser.cpp

// Generated from ..\syrec_antlr\src\core\syrec\parser\antlr\SyReC.g4 by ANTLR 4.11.1


#include "SyReCVisitor.h"

#include "SyReCParser.h"


using namespace antlrcpp;
using namespace parser;

using namespace antlr4;

namespace {

struct SyReCParserStaticData final {
  SyReCParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  SyReCParserStaticData(const SyReCParserStaticData&) = delete;
  SyReCParserStaticData(SyReCParserStaticData&&) = delete;
  SyReCParserStaticData& operator=(const SyReCParserStaticData&) = delete;
  SyReCParserStaticData& operator=(SyReCParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag syrecParserOnceFlag;
SyReCParserStaticData *syrecParserStaticData = nullptr;

void syrecParserInitialize() {
  assert(syrecParserStaticData == nullptr);
  auto staticData = std::make_unique<SyReCParserStaticData>(
    std::vector<std::string>{
      "number", "program", "module", "parameterList", "parameter", "signalList", 
      "signalDeclaration", "statementList", "statement", "callStatement", 
      "loopVariableDefinition", "loopStepsizeDefinition", "forStatement", 
      "ifStatement", "unaryStatement", "assignStatement", "swapStatement", 
      "skipStatement", "signal", "expression", "binaryExpression", "unaryExpression", 
      "shiftExpression"
    },
    std::vector<std::string>{
      "", "'('", "')'", "'module'", "'['", "']'", "'step'", "'for'", "'to'", 
      "'do'", "'rof'", "'if'", "'then'", "'else'", "'fi'", "'<=>'", "'skip'", 
      "'.'", "':'", "'++='", "'--='", "'~='", "'+='", "'-='", "'^='", "'+'", 
      "'-'", "'*'", "'*>'", "'/'", "'%'", "'<<'", "'>>'", "'>='", "'<='", 
      "'>'", "'<'", "'='", "'!='", "'&&'", "'||'", "'!'", "'&'", "'~'", 
      "'|'", "'^'", "'call'", "'uncall'", "'in'", "'out'", "'inout'", "'wire'", 
      "'state'", "'$'", "'#'", "';'", "','"
    },
    std::vector<std::string>{
      "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", 
      "", "", "OP_INCREMENT_ASSIGN", "OP_DECREMENT_ASSIGN", "OP_INVERT_ASSIGN", 
      "OP_ADD_ASSIGN", "OP_SUB_ASSIGN", "OP_XOR_ASSIGN", "OP_PLUS", "OP_MINUS", 
      "OP_MULTIPLY", "OP_UPPER_BIT_MULTIPLY", "OP_DIVISION", "OP_MODULO", 
      "OP_LEFT_SHIFT", "OP_RIGHT_SHIFT", "OP_GREATER_OR_EQUAL", "OP_LESS_OR_EQUAL", 
      "OP_GREATER_THAN", "OP_LESS_THAN", "OP_EQUAL", "OP_NOT_EQUAL", "OP_LOGICAL_AND", 
      "OP_LOGICAL_OR", "OP_LOGICAL_NEGATION", "OP_BITWISE_AND", "OP_BITWISE_NEGATION", 
      "OP_BITWISE_OR", "OP_BITWISE_XOR", "OP_CALL", "OP_UNCALL", "VAR_TYPE_IN", 
      "VAR_TYPE_OUT", "VAR_TYPE_INOUT", "VAR_TYPE_WIRE", "VAR_TYPE_STATE", 
      "LOOP_VARIABLE_PREFIX", "SIGNAL_WIDTH_PREFIX", "STATEMENT_DELIMITER", 
      "PARAMETER_DELIMITER", "SKIPABLEWHITSPACES", "LINE_COMMENT", "MULTI_LINE_COMMENT", 
      "IDENT", "INT"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  syrecParserStaticData = staticData.release();
}

}

SyReCParser::SyReCParser(TokenStream *input) : SyReCParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

SyReCParser::SyReCParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  SyReCParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *syrecParserStaticData->atn, syrecParserStaticData->decisionToDFA, syrecParserStaticData->sharedContextCache, options);
}

SyReCParser::~SyReCParser() {
  delete _interpreter;
}

const atn::ATN& SyReCParser::getATN() const {
  return *syrecParserStaticData->atn;
}

std::string SyReCParser::getGrammarFileName() const {
  return "SyReC.g4";
}

const std::vector<std::string>& SyReCParser::getRuleNames() const {
  return syrecParserStaticData->ruleNames;
}

const dfa::Vocabulary& SyReCParser::getVocabulary() const {
  return syrecParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView SyReCParser::getSerializedATN() const {
  return syrecParserStaticData->serializedATN;
}


//----------------- NumberContext ------------------------------------------------------------------

SyReCParser::NumberContext::NumberContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t SyReCParser::NumberContext::getRuleIndex() const {
  return SyReCParser::RuleNumber;
}

void SyReCParser::NumberContext::copyFrom(NumberContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- NumberFromSignalwidthContext ------------------------------------------------------------------

tree::TerminalNode* SyReCParser::NumberFromSignalwidthContext::SIGNAL_WIDTH_PREFIX() {
  return getToken(SyReCParser::SIGNAL_WIDTH_PREFIX, 0);
}

tree::TerminalNode* SyReCParser::NumberFromSignalwidthContext::IDENT() {
  return getToken(SyReCParser::IDENT, 0);
}

SyReCParser::NumberFromSignalwidthContext::NumberFromSignalwidthContext(NumberContext *ctx) { copyFrom(ctx); }


std::any SyReCParser::NumberFromSignalwidthContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SyReCVisitor*>(visitor))
    return parserVisitor->visitNumberFromSignalwidth(this);
  else
    return visitor->visitChildren(this);
}
//----------------- NumberFromLoopVariableContext ------------------------------------------------------------------

tree::TerminalNode* SyReCParser::NumberFromLoopVariableContext::LOOP_VARIABLE_PREFIX() {
  return getToken(SyReCParser::LOOP_VARIABLE_PREFIX, 0);
}

tree::TerminalNode* SyReCParser::NumberFromLoopVariableContext::IDENT() {
  return getToken(SyReCParser::IDENT, 0);
}

SyReCParser::NumberFromLoopVariableContext::NumberFromLoopVariableContext(NumberContext *ctx) { copyFrom(ctx); }


std::any SyReCParser::NumberFromLoopVariableContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SyReCVisitor*>(visitor))
    return parserVisitor->visitNumberFromLoopVariable(this);
  else
    return visitor->visitChildren(this);
}
//----------------- NumberFromConstantContext ------------------------------------------------------------------

tree::TerminalNode* SyReCParser::NumberFromConstantContext::INT() {
  return getToken(SyReCParser::INT, 0);
}

SyReCParser::NumberFromConstantContext::NumberFromConstantContext(NumberContext *ctx) { copyFrom(ctx); }


std::any SyReCParser::NumberFromConstantContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SyReCVisitor*>(visitor))
    return parserVisitor->visitNumberFromConstant(this);
  else
    return visitor->visitChildren(this);
}
//----------------- NumberFromExpressionContext ------------------------------------------------------------------

std::vector<SyReCParser::NumberContext *> SyReCParser::NumberFromExpressionContext::number() {
  return getRuleContexts<SyReCParser::NumberContext>();
}

SyReCParser::NumberContext* SyReCParser::NumberFromExpressionContext::number(size_t i) {
  return getRuleContext<SyReCParser::NumberContext>(i);
}

tree::TerminalNode* SyReCParser::NumberFromExpressionContext::OP_PLUS() {
  return getToken(SyReCParser::OP_PLUS, 0);
}

tree::TerminalNode* SyReCParser::NumberFromExpressionContext::OP_MINUS() {
  return getToken(SyReCParser::OP_MINUS, 0);
}

tree::TerminalNode* SyReCParser::NumberFromExpressionContext::OP_MULTIPLY() {
  return getToken(SyReCParser::OP_MULTIPLY, 0);
}

tree::TerminalNode* SyReCParser::NumberFromExpressionContext::OP_DIVISION() {
  return getToken(SyReCParser::OP_DIVISION, 0);
}

SyReCParser::NumberFromExpressionContext::NumberFromExpressionContext(NumberContext *ctx) { copyFrom(ctx); }


std::any SyReCParser::NumberFromExpressionContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SyReCVisitor*>(visitor))
    return parserVisitor->visitNumberFromExpression(this);
  else
    return visitor->visitChildren(this);
}
SyReCParser::NumberContext* SyReCParser::number() {
  NumberContext *_localctx = _tracker.createInstance<NumberContext>(_ctx, getState());
  enterRule(_localctx, 0, SyReCParser::RuleNumber);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(57);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case SyReCParser::INT: {
        _localctx = _tracker.createInstance<SyReCParser::NumberFromConstantContext>(_localctx);
        enterOuterAlt(_localctx, 1);
        setState(46);
        match(SyReCParser::INT);
        break;
      }

      case SyReCParser::SIGNAL_WIDTH_PREFIX: {
        _localctx = _tracker.createInstance<SyReCParser::NumberFromSignalwidthContext>(_localctx);
        enterOuterAlt(_localctx, 2);
        setState(47);
        match(SyReCParser::SIGNAL_WIDTH_PREFIX);
        setState(48);
        match(SyReCParser::IDENT);
        break;
      }

      case SyReCParser::LOOP_VARIABLE_PREFIX: {
        _localctx = _tracker.createInstance<SyReCParser::NumberFromLoopVariableContext>(_localctx);
        enterOuterAlt(_localctx, 3);
        setState(49);
        match(SyReCParser::LOOP_VARIABLE_PREFIX);
        setState(50);
        match(SyReCParser::IDENT);
        break;
      }

      case SyReCParser::T__0: {
        _localctx = _tracker.createInstance<SyReCParser::NumberFromExpressionContext>(_localctx);
        enterOuterAlt(_localctx, 4);
        setState(51);
        match(SyReCParser::T__0);
        setState(52);
        antlrcpp::downCast<NumberFromExpressionContext *>(_localctx)->lhsOperand = number();
        setState(53);
        antlrcpp::downCast<NumberFromExpressionContext *>(_localctx)->op = _input->LT(1);
        _la = _input->LA(1);
        if (!(((_la & ~ 0x3fULL) == 0) &&
          ((1ULL << _la) & 771751936) != 0)) {
          antlrcpp::downCast<NumberFromExpressionContext *>(_localctx)->op = _errHandler->recoverInline(this);
        }
        else {
          _errHandler->reportMatch(this);
          consume();
        }
        setState(54);
        antlrcpp::downCast<NumberFromExpressionContext *>(_localctx)->rhsOperand = number();
        setState(55);
        match(SyReCParser::T__1);
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ProgramContext ------------------------------------------------------------------

SyReCParser::ProgramContext::ProgramContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* SyReCParser::ProgramContext::EOF() {
  return getToken(SyReCParser::EOF, 0);
}

std::vector<SyReCParser::ModuleContext *> SyReCParser::ProgramContext::module() {
  return getRuleContexts<SyReCParser::ModuleContext>();
}

SyReCParser::ModuleContext* SyReCParser::ProgramContext::module(size_t i) {
  return getRuleContext<SyReCParser::ModuleContext>(i);
}


size_t SyReCParser::ProgramContext::getRuleIndex() const {
  return SyReCParser::RuleProgram;
}


std::any SyReCParser::ProgramContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SyReCVisitor*>(visitor))
    return parserVisitor->visitProgram(this);
  else
    return visitor->visitChildren(this);
}

SyReCParser::ProgramContext* SyReCParser::program() {
  ProgramContext *_localctx = _tracker.createInstance<ProgramContext>(_ctx, getState());
  enterRule(_localctx, 2, SyReCParser::RuleProgram);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(60); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(59);
      module();
      setState(62); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while (_la == SyReCParser::T__2);
    setState(64);
    match(SyReCParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ModuleContext ------------------------------------------------------------------

SyReCParser::ModuleContext::ModuleContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* SyReCParser::ModuleContext::IDENT() {
  return getToken(SyReCParser::IDENT, 0);
}

SyReCParser::StatementListContext* SyReCParser::ModuleContext::statementList() {
  return getRuleContext<SyReCParser::StatementListContext>(0);
}

SyReCParser::ParameterListContext* SyReCParser::ModuleContext::parameterList() {
  return getRuleContext<SyReCParser::ParameterListContext>(0);
}

std::vector<SyReCParser::SignalListContext *> SyReCParser::ModuleContext::signalList() {
  return getRuleContexts<SyReCParser::SignalListContext>();
}

SyReCParser::SignalListContext* SyReCParser::ModuleContext::signalList(size_t i) {
  return getRuleContext<SyReCParser::SignalListContext>(i);
}


size_t SyReCParser::ModuleContext::getRuleIndex() const {
  return SyReCParser::RuleModule;
}


std::any SyReCParser::ModuleContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SyReCVisitor*>(visitor))
    return parserVisitor->visitModule(this);
  else
    return visitor->visitChildren(this);
}

SyReCParser::ModuleContext* SyReCParser::module() {
  ModuleContext *_localctx = _tracker.createInstance<ModuleContext>(_ctx, getState());
  enterRule(_localctx, 4, SyReCParser::RuleModule);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(66);
    match(SyReCParser::T__2);
    setState(67);
    match(SyReCParser::IDENT);
    setState(68);
    match(SyReCParser::T__0);
    setState(70);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 1970324836974592) != 0) {
      setState(69);
      parameterList();
    }
    setState(72);
    match(SyReCParser::T__1);
    setState(76);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == SyReCParser::VAR_TYPE_WIRE

    || _la == SyReCParser::VAR_TYPE_STATE) {
      setState(73);
      signalList();
      setState(78);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(79);
    statementList();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ParameterListContext ------------------------------------------------------------------

SyReCParser::ParameterListContext::ParameterListContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<SyReCParser::ParameterContext *> SyReCParser::ParameterListContext::parameter() {
  return getRuleContexts<SyReCParser::ParameterContext>();
}

SyReCParser::ParameterContext* SyReCParser::ParameterListContext::parameter(size_t i) {
  return getRuleContext<SyReCParser::ParameterContext>(i);
}

std::vector<tree::TerminalNode *> SyReCParser::ParameterListContext::PARAMETER_DELIMITER() {
  return getTokens(SyReCParser::PARAMETER_DELIMITER);
}

tree::TerminalNode* SyReCParser::ParameterListContext::PARAMETER_DELIMITER(size_t i) {
  return getToken(SyReCParser::PARAMETER_DELIMITER, i);
}


size_t SyReCParser::ParameterListContext::getRuleIndex() const {
  return SyReCParser::RuleParameterList;
}


std::any SyReCParser::ParameterListContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SyReCVisitor*>(visitor))
    return parserVisitor->visitParameterList(this);
  else
    return visitor->visitChildren(this);
}

SyReCParser::ParameterListContext* SyReCParser::parameterList() {
  ParameterListContext *_localctx = _tracker.createInstance<ParameterListContext>(_ctx, getState());
  enterRule(_localctx, 6, SyReCParser::RuleParameterList);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(81);
    parameter();
    setState(86);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == SyReCParser::PARAMETER_DELIMITER) {
      setState(82);
      match(SyReCParser::PARAMETER_DELIMITER);
      setState(83);
      parameter();
      setState(88);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ParameterContext ------------------------------------------------------------------

SyReCParser::ParameterContext::ParameterContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

SyReCParser::SignalDeclarationContext* SyReCParser::ParameterContext::signalDeclaration() {
  return getRuleContext<SyReCParser::SignalDeclarationContext>(0);
}

tree::TerminalNode* SyReCParser::ParameterContext::VAR_TYPE_IN() {
  return getToken(SyReCParser::VAR_TYPE_IN, 0);
}

tree::TerminalNode* SyReCParser::ParameterContext::VAR_TYPE_OUT() {
  return getToken(SyReCParser::VAR_TYPE_OUT, 0);
}

tree::TerminalNode* SyReCParser::ParameterContext::VAR_TYPE_INOUT() {
  return getToken(SyReCParser::VAR_TYPE_INOUT, 0);
}


size_t SyReCParser::ParameterContext::getRuleIndex() const {
  return SyReCParser::RuleParameter;
}


std::any SyReCParser::ParameterContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SyReCVisitor*>(visitor))
    return parserVisitor->visitParameter(this);
  else
    return visitor->visitChildren(this);
}

SyReCParser::ParameterContext* SyReCParser::parameter() {
  ParameterContext *_localctx = _tracker.createInstance<ParameterContext>(_ctx, getState());
  enterRule(_localctx, 8, SyReCParser::RuleParameter);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(89);
    _la = _input->LA(1);
    if (!(((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 1970324836974592) != 0)) {
    _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
    setState(90);
    signalDeclaration();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- SignalListContext ------------------------------------------------------------------

SyReCParser::SignalListContext::SignalListContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<SyReCParser::SignalDeclarationContext *> SyReCParser::SignalListContext::signalDeclaration() {
  return getRuleContexts<SyReCParser::SignalDeclarationContext>();
}

SyReCParser::SignalDeclarationContext* SyReCParser::SignalListContext::signalDeclaration(size_t i) {
  return getRuleContext<SyReCParser::SignalDeclarationContext>(i);
}

tree::TerminalNode* SyReCParser::SignalListContext::VAR_TYPE_WIRE() {
  return getToken(SyReCParser::VAR_TYPE_WIRE, 0);
}

tree::TerminalNode* SyReCParser::SignalListContext::VAR_TYPE_STATE() {
  return getToken(SyReCParser::VAR_TYPE_STATE, 0);
}

std::vector<tree::TerminalNode *> SyReCParser::SignalListContext::PARAMETER_DELIMITER() {
  return getTokens(SyReCParser::PARAMETER_DELIMITER);
}

tree::TerminalNode* SyReCParser::SignalListContext::PARAMETER_DELIMITER(size_t i) {
  return getToken(SyReCParser::PARAMETER_DELIMITER, i);
}


size_t SyReCParser::SignalListContext::getRuleIndex() const {
  return SyReCParser::RuleSignalList;
}


std::any SyReCParser::SignalListContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SyReCVisitor*>(visitor))
    return parserVisitor->visitSignalList(this);
  else
    return visitor->visitChildren(this);
}

SyReCParser::SignalListContext* SyReCParser::signalList() {
  SignalListContext *_localctx = _tracker.createInstance<SignalListContext>(_ctx, getState());
  enterRule(_localctx, 10, SyReCParser::RuleSignalList);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(92);
    _la = _input->LA(1);
    if (!(_la == SyReCParser::VAR_TYPE_WIRE

    || _la == SyReCParser::VAR_TYPE_STATE)) {
    _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
    setState(93);
    signalDeclaration();
    setState(98);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == SyReCParser::PARAMETER_DELIMITER) {
      setState(94);
      match(SyReCParser::PARAMETER_DELIMITER);
      setState(95);
      signalDeclaration();
      setState(100);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- SignalDeclarationContext ------------------------------------------------------------------

SyReCParser::SignalDeclarationContext::SignalDeclarationContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* SyReCParser::SignalDeclarationContext::IDENT() {
  return getToken(SyReCParser::IDENT, 0);
}

std::vector<tree::TerminalNode *> SyReCParser::SignalDeclarationContext::INT() {
  return getTokens(SyReCParser::INT);
}

tree::TerminalNode* SyReCParser::SignalDeclarationContext::INT(size_t i) {
  return getToken(SyReCParser::INT, i);
}


size_t SyReCParser::SignalDeclarationContext::getRuleIndex() const {
  return SyReCParser::RuleSignalDeclaration;
}


std::any SyReCParser::SignalDeclarationContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SyReCVisitor*>(visitor))
    return parserVisitor->visitSignalDeclaration(this);
  else
    return visitor->visitChildren(this);
}

SyReCParser::SignalDeclarationContext* SyReCParser::signalDeclaration() {
  SignalDeclarationContext *_localctx = _tracker.createInstance<SignalDeclarationContext>(_ctx, getState());
  enterRule(_localctx, 12, SyReCParser::RuleSignalDeclaration);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(101);
    match(SyReCParser::IDENT);
    setState(107);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == SyReCParser::T__3) {
      setState(102);
      match(SyReCParser::T__3);
      setState(103);
      antlrcpp::downCast<SignalDeclarationContext *>(_localctx)->intToken = match(SyReCParser::INT);
      antlrcpp::downCast<SignalDeclarationContext *>(_localctx)->dimensionTokens.push_back(antlrcpp::downCast<SignalDeclarationContext *>(_localctx)->intToken);
      setState(104);
      match(SyReCParser::T__4);
      setState(109);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(113);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == SyReCParser::T__0) {
      setState(110);
      match(SyReCParser::T__0);
      setState(111);
      antlrcpp::downCast<SignalDeclarationContext *>(_localctx)->signalWidthToken = match(SyReCParser::INT);
      setState(112);
      match(SyReCParser::T__1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StatementListContext ------------------------------------------------------------------

SyReCParser::StatementListContext::StatementListContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<SyReCParser::StatementContext *> SyReCParser::StatementListContext::statement() {
  return getRuleContexts<SyReCParser::StatementContext>();
}

SyReCParser::StatementContext* SyReCParser::StatementListContext::statement(size_t i) {
  return getRuleContext<SyReCParser::StatementContext>(i);
}

std::vector<tree::TerminalNode *> SyReCParser::StatementListContext::STATEMENT_DELIMITER() {
  return getTokens(SyReCParser::STATEMENT_DELIMITER);
}

tree::TerminalNode* SyReCParser::StatementListContext::STATEMENT_DELIMITER(size_t i) {
  return getToken(SyReCParser::STATEMENT_DELIMITER, i);
}


size_t SyReCParser::StatementListContext::getRuleIndex() const {
  return SyReCParser::RuleStatementList;
}


std::any SyReCParser::StatementListContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SyReCVisitor*>(visitor))
    return parserVisitor->visitStatementList(this);
  else
    return visitor->visitChildren(this);
}
